fix color description overflow in small screen
the solution is to clear its left, make it renders in a new line, and then reduce the size of color box

it's a redesign rather than fix of the old style

--- a/index.scss
+++ b/index.scss
@@ -86,7 +86,6 @@ dl {
   display: block;
   width: 120px;
   height: 120px;
-  text-transform: uppercase;
   line-height: 1.618;
   float: left;
   margin-right: 1em;
@@ -144,6 +143,17 @@ dl {
   }
   dl {
     width: 100%;
+    height: auto;
+  }
+  .colorBox {
+    width: 78px;
+    height: 78px;
+  }
+  .colorValue {
+    margin-bottom: 18px;
+  }
+  .colorDesc {
+    clear: left;
   }
 
   #wrapper {
